openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_Discrete2DFunction_setFunctionParameters(
        target: *mut OpenMM_Discrete2DFunction,
        xsize: ::std::os::raw::c_int,
        ysize: ::std::os::raw::c_int,
        values: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_Discrete2DFunction_Copy(
        target: *const OpenMM_Discrete2DFunction,
    ) -> *mut OpenMM_Discrete2DFunction;
}
extern "C" {
    pub fn OpenMM_Force_destroy(target: *mut OpenMM_Force);
}
extern "C" {
    pub fn OpenMM_Force_getForceGroup(target: *const OpenMM_Force) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_Force_setForceGroup(target: *mut OpenMM_Force, group: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_Force_usesPeriodicBoundaryConditions(
        target: *const OpenMM_Force,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_create(
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomAngleForce;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_destroy(target: *mut OpenMM_CustomAngleForce);
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getNumAngles(
        target: *const OpenMM_CustomAngleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getNumPerAngleParameters(
        target: *const OpenMM_CustomAngleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getNumGlobalParameters(
        target: *const OpenMM_CustomAngleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getNumEnergyParameterDerivatives(
        target: *const OpenMM_CustomAngleForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getEnergyFunction(
        target: *const OpenMM_CustomAngleForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setEnergyFunction(
        target: *mut OpenMM_CustomAngleForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_addPerAngleParameter(
        target: *mut OpenMM_CustomAngleForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getPerAngleParameterName(
        target: *const OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setPerAngleParameterName(
        target: *mut OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_addGlobalParameter(
        target: *mut OpenMM_CustomAngleForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getGlobalParameterName(
        target: *const OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setGlobalParameterName(
        target: *mut OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_addEnergyParameterDerivative(
        target: *mut OpenMM_CustomAngleForce,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getEnergyParameterDerivativeName(
        target: *const OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_addAngle(
        target: *mut OpenMM_CustomAngleForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_getAngleParameters(
        target: *const OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        particle3: *mut ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setAngleParameters(
        target: *mut OpenMM_CustomAngleForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_updateParametersInContext(
        target: *mut OpenMM_CustomAngleForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_setUsesPeriodicBoundaryConditions(
        target: *mut OpenMM_CustomAngleForce,
        periodic: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_CustomAngleForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomAngleForce,
    ) -> OpenMM_Boolean;
}
pub const OpenMM_CustomNonbondedForce_NonbondedMethod_OpenMM_CustomNonbondedForce_NoCutoff:
    OpenMM_CustomNonbondedForce_NonbondedMethod = 0;
pub const OpenMM_CustomNonbondedForce_NonbondedMethod_OpenMM_CustomNonbondedForce_CutoffNonPeriodic : OpenMM_CustomNonbondedForce_NonbondedMethod = 1 ;
pub const OpenMM_CustomNonbondedForce_NonbondedMethod_OpenMM_CustomNonbondedForce_CutoffPeriodic:
    OpenMM_CustomNonbondedForce_NonbondedMethod = 2;
pub type OpenMM_CustomNonbondedForce_NonbondedMethod = u32;
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_create(
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomNonbondedForce;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_create_2(
        rhs: *const OpenMM_CustomNonbondedForce,
    ) -> *mut OpenMM_CustomNonbondedForce;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_destroy(target: *mut OpenMM_CustomNonbondedForce);
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumParticles(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumExclusions(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumPerParticleParameters(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumGlobalParameters(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumTabulatedFunctions(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumFunctions(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumInteractionGroups(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNumEnergyParameterDerivatives(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getEnergyFunction(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setEnergyFunction(
        target: *mut OpenMM_CustomNonbondedForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getNonbondedMethod(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> OpenMM_CustomNonbondedForce_NonbondedMethod;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setNonbondedMethod(
        target: *mut OpenMM_CustomNonbondedForce,
        method: OpenMM_CustomNonbondedForce_NonbondedMethod,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getCutoffDistance(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setCutoffDistance(
        target: *mut OpenMM_CustomNonbondedForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getUseSwitchingFunction(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setUseSwitchingFunction(
        target: *mut OpenMM_CustomNonbondedForce,
        use_: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getSwitchingDistance(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setSwitchingDistance(
        target: *mut OpenMM_CustomNonbondedForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getUseLongRangeCorrection(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setUseLongRangeCorrection(
        target: *mut OpenMM_CustomNonbondedForce,
        use_: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addPerParticleParameter(
        target: *mut OpenMM_CustomNonbondedForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getPerParticleParameterName(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setPerParticleParameterName(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addGlobalParameter(
        target: *mut OpenMM_CustomNonbondedForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getGlobalParameterName(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setGlobalParameterName(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addEnergyParameterDerivative(
        target: *mut OpenMM_CustomNonbondedForce,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getEnergyParameterDerivativeName(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addParticle(
        target: *mut OpenMM_CustomNonbondedForce,
        parameters: *const OpenMM_DoubleArray,
    ) -> ::std::os::raw::c_int;
}
